cleanup and re-arranging priorities

--- a/index.html
+++ b/index.html
@@ -57,39 +57,42 @@
     1983-11-21
   </p>
 
-  <h3>Goal</h3>
-  <p>
-    Building great apps with Ruby/Ruby on Rails
-  </p>
+  <h3>Goals</h3>
+  <ul>
+    <li>Build great products with Ruby/Ruby on Rails.</li>
+    <li>Embrace simplicity and usability while being innovative and agile.</li>
+    <li>Sharing knowledge and learning from a great team that lives by pairing, code-review and TDD.</li>
+    <li>Contribute to Open-source.</li>
+  </ul>
 
   <h3>Experience</h3>
   <ul>
     <li>
-      <em>2008-present</em> Created & contributed to 108 OS projects<br />
+      <em>2008-present</em> Created & contributed to 112 OS projects<br />
       <small>
-        2327 watchers /
-        185 forks
+        2462 watchers /
+        212 forks
         (on own projects)
       </small>
     </li>
     <li>
       <em>2009-present</em> Rails Frontent+Backend developer at DaWanda.com<br />
       <small>
-        Online marketplace with 500K users / 2M products / ~40 servers / 10K RPM / 60KLOC / 30M images.<br />
-        Nginx, Memcached, Cap, Varnish, Puppet, HaProxy, Xen, Redis, Git, MySql, Solr, Prototype, LESS, RPXNow, Gettext
+        Online marketplace with 1M users / 3M products / ~40 servers / 10K RPM / 60KLOC.<br />
+        Rails, Sinatra, Ruby, MySql, Git, HTML, CSS, jQuery+Prototype, Solr, Varnish, Puppet, Nginx, Memcached, Cap, HaProxy, Redis, Gettext, Xen
       </small>
     </li>
     <li>
       <em>2008-2009</em> Founder and Rails Frontent+Backend developer at rathershort.com<br />
       <small>
         Movie distribution platform, 20KLOC<br />
-        Passenger, Cap, HyperEstraier, jQuery, Haml, OpenId, OAuth, SQS, RPXNow, Gettext, XML-RPC, Google maps
+        Rails, Ruby, jQuery, Haml, Cap, HyperEstraier, OpenId, OAuth, SQS, RPXNow, Gettext, XML-RPC, Google maps
       </small>
     </li>
     <li>
       <em>2006-2008</em> PHP-Rails clone developer at 20sec.net<br />
       <small>
-        Smaller projects for variouse clients e.g. Triad, Hamburder abendblatt, Berlinale
+        Smaller projects for various clients e.g. Triad, Hamburder abendblatt, Berlinale
       </small>
     </li>
     <li>
@@ -103,7 +106,7 @@
     </li>
   </ul>
 
-  <h3>Skills</h3>
+  <h3>Example projects</h3>
   <ul>
     <li>
       Simple/pragmatic solutions<br />
@@ -138,15 +141,14 @@
     </li>
     <li>
       Crazy stuff<br />
-      <a href="http://github.com/grosser/rube_post">rube_post</a>, <a href="http://github.com/grosser/ha_plus">ha_plus</a>, <a href="http://github.com/grosser/ruco">ruco</a>, <a href="http://github.com/grosser/gem-dependent">gem-dependent</a>
+      <a href="http://github.com/grosser/ha_plus">ha_plus</a>, <a href="http://github.com/grosser/ruco">ruco</a>, <a href="http://github.com/grosser/gem-dependent">gem-dependent</a>
     </li>
-    <li>Ruby on Rails + Sinatra + Middleware</li>
   </ul>
 
   <h3>Languages</h3>
   <ul>
     <li>native: Ruby, HTML, JS, CSS</li>
-    <li>fluent: SQL, Regexp, Markdown, RDoc, Git, Mongo, Redis</li>
+    <li>fluent: SQL, Regexp, Git, Solr, Redis</li>
     <li>human: native German + fluent English</li>
   </ul>
 </div>
