--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div style="clear:both"></div>
-  
+
   <h1 class="centered">
     <a href="http://github.com/grosser">Michael Grosser</a>
   </h1>
@@ -68,10 +68,10 @@
   <h3>Experience</h3>
   <ul>
     <li>
-      <em>2008-present</em> Created & contributed to 112 OS projects<br />
+      <em>2008-present</em> Created & contributed to 115 OS projects<br />
       <small>
-        2462 watchers /
-        212 forks
+        2813 watchers /
+        228 forks
         (on own projects)
       </small>
     </li>
@@ -110,7 +110,7 @@
   <ul>
     <li>
       Simple/pragmatic solutions<br />
-      <a href="http://github.com/grosser/parallel">parallel</a>, <a href="http://github.com/grosser/url_store">url_store</a>, <a href="http://github.com/grosser/bitfields">bitfields</a>, <a href="http://github.com/grosser/tracked_plugins">tracked_plugins</a>, <a href="http://github.com/grosser/random_records">random_records</a>, <a href="http://github.com/grosser/text_filter">text_filter</a>, <a href="http://github.com/grosser/db_graph">db_graph</a>, <a href="http://github.com/grosser/smusher">smusher</a>, <a href="http://github.com/grosser/rpx_now">rpx_now</a>, <a href="http://github.com/grosser/fallback">fallback</a>, <a href="http://github.com/grosser/scopify">scopify</a>, <a href="http://github.com/grosser/restful_catch_all_route">restful_catch_all_route</a>, <a href="http://github.com/grosser/cachy">cachy</a>, <a href="http://github.com/grosser/string19">string19</a>, <a href="http://github.com/grosser/mini_memory_store">mini_memory_store</a>, <a href="http://github.com/grosser/solr_collection">solr_collection</a>, <a href="http://github.com/grosser/preheatable_cache">preheatable_cache</a><br />
+      <a href="http://github.com/grosser/parallel">parallel</a>, <a href="http://github.com/grosser/url_store">url_store</a>, <a href="http://github.com/grosser/bitfields">bitfields</a>, <a href="http://github.com/grosser/pru">pru</a>, <a href="http://github.com/grosser/tracked_plugins">tracked_plugins</a>, <a href="http://github.com/grosser/random_records">random_records</a>, <a href="http://github.com/grosser/text_filter">text_filter</a>, <a href="http://github.com/grosser/db_graph">db_graph</a>, <a href="http://github.com/grosser/smusher">smusher</a>, <a href="http://github.com/grosser/rpx_now">rpx_now</a>, <a href="http://github.com/grosser/fallback">fallback</a>, <a href="http://github.com/grosser/scopify">scopify</a>, <a href="http://github.com/grosser/restful_catch_all_route">restful_catch_all_route</a>, <a href="http://github.com/grosser/cachy">cachy</a>, <a href="http://github.com/grosser/string19">string19</a>, <a href="http://github.com/grosser/mini_memory_store">mini_memory_store</a>, <a href="http://github.com/grosser/solr_collection">solr_collection</a>, <a href="http://github.com/grosser/preheatable_cache">preheatable_cache</a><br />
     </li>
     <li>
       TDD<br />
