--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     1983-11-21
   </p>
 
+  <p>
+    Full stack engineer focused in Ruby / Rails and various backend technologies.
+  </p>
+
   <h3>Goals</h3>
   <ul>
     <li>Build great products with Ruby/Ruby on Rails.</li>
@@ -68,26 +72,24 @@
   <h3>Experience</h3>
   <ul>
     <li>
-      <em>2008-present</em> Created & contributed to 362 OS projects<br />
+      <em>2008-present</em> Created & contributed to 486 OS projects<br />
       <small>
-        11008 stars /
-        1336 forks
+        22542 stars /
+        2909 forks
         (on own projects)
       </small>
     </li>
     <li>
-      <em>2012-present</em> Rails Engineer at Zendesk.com (San Francisco)<br />
+      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
       <small>
-        Cloud helpdesk.<br/>
         Backend engineering and tooling for api/authentificaion/email/developer productivity.<br/>
-        Help developer standardization via boxen, rails 2 -> 3 upgrades without downtime on giant app.
       </small>
     </li>
     <li>
       <em>2011-2012</em> Rails Engineer at PivotalLabs.com (San Francisco)<br />
       <small>
-        Awesome web-consultancy.<br/>
-        Rails, Postgres, Heroku, Git, Sass, jQuery, Backbone and a teaspoon of Ember.js
+        Web-consultancy.<br/>
+        Helped clients with Rails, Postgres, Heroku, Git, Sass, jQuery, Backbone and Ember.js
       </small>
     </li>
     <li>
@@ -158,14 +160,6 @@
       <a href="https://github.com/grosser/ruco">ruco</a> (commandline editor),
       <a href="https://github.com/grosser/gem_on_demand">gem_on_demand</a>, <a href="https://github.com/grosser/gem-dependent">gem-dependent</a>, <a href="https://github.com/grosser/autoscaling">autoscaling</a>, <a href="https://github.com/grosser/key_value">key_value</a>
     </li>
-    <li>and tons <a href="https://github.com/grosser">more...</a></li>
-  </ul>
-
-  <h3>Languages</h3>
-  <ul>
-    <li>native: Ruby, HTML, JS, CSS</li>
-    <li>fluent: SQL, Regexp, Git, Solr, Redis</li>
-    <li>human: native German + fluent English</li>
   </ul>
 </div>
 </body>
