--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </small>
     </li>
     <li>
-      <em>2009-2011</em> Rails Frontend+Backend engineer at DaWanda.com (Berlin)<br />
+      <em>2009-2011</em> Rails engineer at DaWanda.com (Berlin)<br />
       <small>
         EN/FR/DE Online marketplace with 1M users / 3M products / ~40 servers / 10K RPM / 60KLOC.<br />
         Rails, Sinatra, Ruby, MySql, Git, HTML, CSS, jQuery+Prototype, Solr, Varnish, Node.js, Puppet, Nginx, Memcached, Cap, HaProxy, Redis, Gettext, Xen
