--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-<a href="https://github.com/grosser/cv" id="badge"><img alt="Forkme_right_darkblue_121621" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" style="position: absolute; top: 0; right: 0;" /></a>
+<a id="badge" href="https://github.com/grosser/cv"><img style="position: absolute; top: 0; right: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Forkme right darkblue 121621" /></a>
 
 <div id="container">
 
@@ -56,33 +56,50 @@
   </p>
 
   <p>
-    Full stack engineer focused in Ruby / Rails and various backend technologies.
+    Tech lead focused on Kubernetes, Ruby, Go.
   </p>
 
   <h3>Goals</h3>
   <ul>
-    <li>Build great products with Ruby/Ruby on Rails.</li>
-    <li>Embrace simplicity and usability while being innovative and agile.</li>
-    <li>Sharing knowledge and learning with a team that lives by pairing and TDD.</li>
+    <li>Build simple but powerful developer experiences.</li>
+    <li>Sharing knowledge and learning with a team, that focuses on simple solutions, built on quick iterations.</li>
     <li>Contribute to Open-source.</li>
   </ul>
 
   <h3>Experience</h3>
   <ul>
     <li>
-      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
+      <em>2020-2022</em> Group Tech Lead & Senior Staff Engineer at Zendesk.com (San Francisco)<br />
       <small>
-        Backend engineering and tooling for kubernetes/docker/deployment/api/testing/developer productivity.<br/>
-        Created and maintaining many services (deployment support, project organization, service discovery, etc.).<br/>
-        Spreading best-practices around testing/deployment/security/dev-productivity thoughout all projects.<br/>
-        Helped with engineering onboarding, mentoring, and organized pairing sessions.
+        Backend engineering and tooling for kubernetes/deployment/SRE/developer productivity.<br/>
+        Created and maintained many services (deployment support, project organization, service discovery, etc.).<br/>
+        Spreading testing/deployment/security/dev-productivity best-practices through the engineering org.<br/>
+        Helping with engineering onboarding, mentoring, and pairing.
       </small>
     </li>
     <li>
-      <em>2008-present</em> Created & contributed to 496 OS projects<br />
+      <em>2016-2018</em> Lech Lead & Senior Staff Software Engineer at Zendesk.com (San Francisco)<br />
       <small>
-        23407 stars /
-        3035 forks
+        Building PAAS based on Kubernetes and migrating 90+% of resources there without downtime.
+      </small>
+    </li>
+    <li>
+      <em>2014-2016</em> Staff Software Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Initial member of Compute team to build POC and lead transition from datacenter to AWS.
+      </small>
+    </li>
+    <li>
+      <em>2012-2014</em> Senior Software Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Working as "office of the CTO" to fix organization cross-cutting concerns that need attention and have no clear owner.
+      </small>
+    </li>
+    <li>
+      <em>2008-present</em> Created & contributed to 558 OS projects<br />
+      <small>
+        28358 stars /
+        3714 forks
         (on own projects)
       </small>
     </li>
@@ -94,7 +111,7 @@
       </small>
     </li>
     <li>
-      <em>2009-2011</em> Rails engineer at DaWanda.com (Berlin)<br />
+      <em>2009-2011</em> Rails Frontend+Backend engineer at DaWanda.com (Berlin)<br />
       <small>
         EN/FR/DE Online marketplace with 1M users / 3M products / ~40 servers / 10K RPM / 60KLOC.<br />
         Rails, Sinatra, Ruby, MySql, Git, HTML, CSS, jQuery+Prototype, Solr, Varnish, Node.js, Puppet, Nginx, Memcached, Cap, HaProxy, Redis, Gettext, Xen
